force-app/main/default/objects/ZP_Product_Line__c/fields/Company_ID__c.field-meta.xml
<CustomField>
    <fullName>Company_ID__c</fullName>
    <description>Company ID from Panda for the Product Line. Company ID is used to associate the products to the right Account.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Company ID from Panda for the Product Line. Company ID is used to associate the products to the right Account.</inlineHelpText>
    <label>Company ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>