force-app/main/default/objects/ZP_Product_Line__c/fields/Last_Processed__c.field-meta.xml
<CustomField>
    <fullName>Last_Processed__c</fullName>
    <description>Date the zp product line record was last processed.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date the zp product line record was last processed.</inlineHelpText>
    <label>Last Processed</label>
    <type>DateTime</type>
</CustomField>