force-app/main/default/objects/ZP_Product_Line__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Message for the Product Line. Field will show any messaging during the processing of the record to the Sales/User facing objects. Will show Processed or error messages during processing.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Message for the Product Line. Field will show any messaging during the processing of the record to the Sales/User facing objects. Will show Processed or error messages during processing.</inlineHelpText>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>