force-app/main/default/objects/ZP_Product_Line__c/fields/Pricing_Plan_ID__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Plan_ID__c</fullName>
    <description>Unique ID for the product line pricing plan. For the base product, this is the tier ID and for the add ons, this is the add on pricing plan ID. Matched to the Pricing Plan ID of the Product record.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Unique ID for the product line pricing plan. For the base product, this is the tier ID and for the add ons, this is the add on pricing plan ID. Matched to the Pricing Plan ID of the Product record.</inlineHelpText>
    <label>Pricing Plan ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>