force-app/main/default/objects/ZP_Product_Line__c/fields/Processing_State__c.field-meta.xml
<CustomField>
    <fullName>Processing_State__c</fullName>
    <description>Processing State for the Product Line record. Shows whether the record has been processed to the Sales/User facing objects, is Backlog and will be processed later or Error when processing errored.</description>
    <inlineHelpText>Processing State for the Product Line record. Shows whether the record has been processed to the Sales/User facing objects, is Backlog and will be processed later or Error when processing errored.</inlineHelpText>
    <label>Processing State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Integration_Processing_States</valueSetName>
    </valueSet>
</CustomField>