force-app/main/default/objects/ZP_Product_Line__c/fields/Retry_Process_Count__c.field-meta.xml
<CustomField>
    <fullName>Retry_Process_Count__c</fullName>
    <description>Indicates how many times record was re-processed in Salesforce after Processing State is updated to Error. The system will try 3 times to reprocess based on ZP Product Line flow which will increment this field each time reprocessing is attempted.</description>
    <inlineHelpText>Indicates how many times record was re-processed in Salesforce after Processing State is updated to Error. The system will try 3 times to reprocess based on ZP Product Line flow which will increment this field each time reprocessing is attempted.</inlineHelpText>
    <label>Retry Process Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>