force-app/main/default/objects/ZP_Product_Line__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Effective Date of the product line record. Effective Date is when the Product is Active or Inactive depending on the status. Effective Dates in the future are set to Backlog Status and processed when Effective Date is met.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Effective Date of the product line record. Effective Date is when the Product is Active or Inactive depending on the status. Effective Dates in the future are set to Backlog Status and processed when Effective Date is met.</inlineHelpText>
    <label>Effective Date</label>
    <type>DateTime</type>
</CustomField>